# docx-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: NOTES.md
examples/: report.docx  report_1.docx
src/: models.py  server.py  settings.py  utils.py
src/core/: adding_content.py  creating.py  editing.py  reading.py
src/tools/: adding_content.py  creating.py  editing.py  reading.py
tests/: conftest.py
tests/unit-tests/: test_creating_tools.py  test_reading_tools.py
