[project]
name = "mcp-server-docx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]==1.26.0",
    "python-docx==1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "__pycache__",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "logs",
    ".git",
    "notebooks",
    "temp",
    ]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
